--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>True Line interior</title>
+        <title>Alpha interior</title>
         <meta name="description" content=""/>
         <meta name="keywords" content=""/>
         <meta name="author" content=""/>
@@ -119,49 +119,7 @@
              <img src="img/slider-images/image7.jpg" alt="main slider" title="#htmlcaption7" />
              <img src="img/slider-images/image8.jpg" alt="main slider" title="#htmlcaption8" />
         </div>
-        <!-- Slider Caption 1 
-        <div id="htmlcaption1" class="nivo-html-caption slider-caption-1">
-            <div class="slider-progress"></div>
-            <div class="container">
-                <div class="slider3-cap-wrapper3 slide-text">
-                    <div class="slide-one-text slide-def hp1-cap1">
-                        <div class="slide-one-dec wow fadeInDown" data-wow-duration=".9s" data-wow-delay="0.8s">
-                            <h4>It has finally started...</h4>
-                        </div>
-                        <div class="slide-one-title wow fadeInDown" data-wow-duration=".9s" data-wow-delay="0.8s">
-                            <h2>Huge sale up to </h2>
-                        </div>
-                        <div class="slide-one-title wow fadeInDown" data-wow-duration=".9s" data-wow-delay="0.8s">
-                            <h1><span class="slide-text-big">70%</span>off</h1>
-                        </div>
-                        <div class="check-it-out slide2btn-check1 wow fadeInDown" data-wow-duration=".9s" data-wow-delay="0.8s">
-                            <a class="btn-def-black" href="shop.html">Shop now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>-->
-        <!-- Slider Caption 2
-        <div id="htmlcaption2" class="nivo-html-caption slider-caption-2">
-            <div class="slider-progress"></div>
-            <div class="container">
-                <div class="slider3-cap-wrapper3 slide-two-cap slide-text text-center">
-                    <div class="slide-two-text slide-def hp1-cap2">
-                        <div class="slide-two-title slide-underline posr wow fadeInUp text-center" data-wow-duration=".9s" data-wow-delay="0.8s">
-                            <h4>Men's Accessories</h4>
-                        </div>
-                        <div class="slide-two-dec wow fadeInUp" data-wow-duration=".9s" data-wow-delay="0.8s">
-                            <h1>Only Rs 89.00</h1>
-                        </div>
-                        <div class="check-it-out slide2btn-check2 wow fadeInUp" data-wow-duration=".9s" data-wow-delay="0.8s">
-                            <a class="btn-def-black" href="shop.html">Shop Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>   -->
-        <!-- End Slider -->         
+              
 
         <!-- Site Wrapper -->
         <div class="site-wrapper" id="about">
@@ -285,7 +243,7 @@
                             <li class="cbp-item office cbp-l-grid-masonry-height2">
                                 <a class="cbp-caption cbp-lightbox" data-title="Office Spaces" href="img/projects/1big.jpg">
                                     <div class="cbp-caption-defaultWrap">
-                                        <img src="img/projects/1.jpg" alt="">
+                                        <img src="img/img1.jpeg" alt="">
                                     </div>
                                     <div class="cbp-caption-activeWrap">
                                         <div class="cbp-l-caption-alignCenter">
@@ -301,7 +259,7 @@
                             <li class="cbp-item houses cbp-l-grid-masonry-height1">
                                 <a class="cbp-caption cbp-lightbox" data-title="House" href="img/projects/2big.jpg">
                                     <div class="cbp-caption-defaultWrap">
-                                        <img src="img/projects/2.jpg" alt="">
+                                        <img src="img/img2.jpeg" alt="">
                                     </div>
                                     <div class="cbp-caption-activeWrap">
                                         <div class="cbp-l-caption-alignCenter">
@@ -318,7 +276,7 @@
                             <li class="cbp-item office cbp-l-grid-masonry-height1">
                                 <a class="cbp-caption cbp-lightbox" data-title="Office" href="img/projects/3big.jpg">
                                     <div class="cbp-caption-defaultWrap">
-                                        <img src="img/projects/3.jpg" alt="">
+                                        <img src="img/img3.jpg" alt="">
                                     </div>
                                     <div class="cbp-caption-activeWrap">
                                         <div class="cbp-l-caption-alignCenter">
@@ -335,7 +293,7 @@
                             <li class="cbp-item office cbp-l-grid-masonry-height2">
                                 <a class="cbp-caption cbp-lightbox" data-title="Office" href="img/projects/4big.jpg">
                                     <div class="cbp-caption-defaultWrap">
-                                        <img src="img/projects/4.jpg" alt="">
+                                        <img src="img/img4.jpeg" alt="">
                                     </div>
                                     <div class="cbp-caption-activeWrap">
                                         <div class="cbp-l-caption-alignCenter">
@@ -351,7 +309,7 @@
                             <li class="cbp-item architecture cbp-l-grid-masonry-height2">
                                 <a class="cbp-caption cbp-lightbox" data-title="Interior" href="img/projects/5big.jpg">
                                     <div class="cbp-caption-defaultWrap">
-                                        <img src="img/projects/5.jpg" alt="">
+                                        <img src="img/img5.jpeg" alt="">
                                     </div>
                                     <div class="cbp-caption-activeWrap">
                                         <div class="cbp-l-caption-alignCenter">
@@ -368,7 +326,7 @@
                             <li class="cbp-item office cbp-l-grid-masonry-height1">
                                 <a class="cbp-caption cbp-lightbox" data-title="Office" href="img/projects/6big.jpg">
                                     <div class="cbp-caption-defaultWrap">
-                                        <img src="img/projects/6.jpg" alt="">
+                                        <img src="img/img6.jpeg" alt="">
                                     </div>
                                     <div class="cbp-caption-activeWrap">
                                         <div class="cbp-l-caption-alignCenter">
@@ -385,7 +343,7 @@
                             <li class="cbp-item office cbp-l-grid-masonry-height1">
                                 <a class="cbp-caption cbp-lightbox" data-title="Office" href="img/projects/7big.jpg">
                                     <div class="cbp-caption-defaultWrap">
-                                        <img src="img/projects/7.jpg" alt="">
+                                        <img src="img/img7.jpeg" alt="">
                                     </div>
                                     <div class="cbp-caption-activeWrap">
                                         <div class="cbp-l-caption-alignCenter">
@@ -807,10 +765,10 @@
                                 <i class="fa fa-map-marker fa-lg"></i> 
                             </div>
                             <div class="col-sm-11">
-                                <strong>India</strong>
+                                <strong>Kenya</strong>
                                 <div class="f-space"></div>
                                <address>                                
-                                    251/E, 1st Floor, XYZXS<br>  
+                                    <br>  
                                     New Delhi- 110057           <br>                    
                                     <abbr title="Phone">P:</abbr> (011) 123456789 <br/>
                                     <abbr title="Phone">M:</abbr> 9800000000 <br/>
