Corrects all typos in the code

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <!-- Meta Tags -->        
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>True Line interior</title>
+        <title>Alpha Interiors</title>
         <meta name="description" content="A Template by Denis Griu"/>
         <meta name="keywords" content=""/>
         <meta name="author" content="Denis Griu"/>
@@ -130,7 +130,7 @@
                     </div>              
                     <div class="col-md-4 text-center">                                
                         <br>
-                        <h3>Founded in 2019</h3>
+                        <h3>Founded in 2020</h3>
                         <hr>
                         <h3>More than 20 Happy Customers</h3>
                         <hr>
@@ -229,11 +229,11 @@
                             <div class="f-space"></div>
                            <address>                                
                                 <br>  
-                                New Delhi- 110057           <br>                    
-                                <abbr title="Phone">P:</abbr> (011) 123456789 <br/>
+                                Nairobi- 110057           <br>                    
+                                <abbr title="Phone">P:</abbr> (+254) 724978302<br/>
                                 <abbr title="Phone">M:</abbr> 9800000000 <br/>
-                                info@interiorweb.com<br/>
-                                abc@interiorweb.com
+                                alphainteriorskenya@gmail.com<br/>
+                                <!-- abc@interiorweb.com -->
                             </address>
                         </div>      
                     </div>                           
@@ -259,10 +259,10 @@
                     <div class="col-sm-6 col-md-6">
                         <!-- Social Icons -->                              
                         <ul class="footer-social">
-                            <li><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a></li>
+                            <li><a href="https://www.facebook.com/alphainteriors.ke"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a></li>
                             <li><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a></li>
                             <li><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-skype fa-stack-1x fa-inverse"></i></span></a></li>
-                            <li><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-pinterest fa-stack-1x fa-inverse"></i></span></a></li>
+                            <li><a href="https://pin.it/2Tc5ZXK"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-pinterest fa-stack-1x fa-inverse"></i></span></a></li>
                         </ul>
                     </div>
                 </div><!-- /row -->
