--- a/luxury.html
+++ b/luxury.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>True Line interior</title>
+        <title>Alpha Interiors</title>
         <meta name="description" content="A Template by Denis Griu"/>
         <meta name="keywords" content=""/>
         <meta name="author" content="Denis Griu"/>
@@ -155,15 +155,14 @@
                                 <i class="fa fa-map-marker fa-lg"></i> 
                             </div>
                             <div class="col-sm-11">
-                                <strong>India</strong>
+                                <strong>Kenya</strong>
                                 <div class="f-space"></div>
                                <address>                                
-                                    251/E, 1st Floor, XYZXS<br>  
-                                    New Delhi- 110057           <br>                    
-                                    <abbr title="Phone">P:</abbr> (011) 123456789 <br/>
+                                <br>  
+                                    Nairobi, Kenya - 110057           <br>                    
+                                    <abbr title="Phone">P:</abbr> (+254) 724978302<br/>
                                     <abbr title="Phone">M:</abbr> 9800000000 <br/>
-                                    info@interiorweb.com<br/>
-                                    abc@interiorweb.com
+                                    alphainteriorskenya@gmail.com<br/>
                                 </address>
                             </div>      
                         </div>                           
@@ -189,10 +188,10 @@
                     <div class="col-sm-6 col-md-6">
                         <!-- Social Icons -->                              
                         <ul class="footer-social">
-                            <li><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a></li>
+                            <li><a href="https://www.facebook.com/alphainteriors.ke"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a></li>
                             <li><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a></li>
                             <li><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-skype fa-stack-1x fa-inverse"></i></span></a></li>
-                            <li><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-pinterest fa-stack-1x fa-inverse"></i></span></a></li>
+                            <li><a href="https://pin.it/2Tc5ZXK"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-pinterest fa-stack-1x fa-inverse"></i></span></a></li>
                         </ul>
                     </div>
                 </div><!-- /row -->
