--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <title>Alpha Interiors</title>
         <meta name="description" content=""/>
         <meta name="keywords" content=""/>
-        <meta name="author" content="Denis Griu"/>
+        <meta name="author" content="Kibet Kyle"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="apple-touch-icon" sizes="57x57" href="fab/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="fab/apple-icon-60x60.png">
