--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Alpha interiors</title>
         <meta name="description" content=""/>
         <meta name="keywords" content=""/>
-        <meta name="author" content=""/>
+        <meta name="author" content="Kibet Kyle"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="apple-touch-icon" sizes="57x57" href="fab/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="fab/apple-icon-60x60.png">
@@ -134,7 +134,23 @@
                             <h2>Who We Are</h2>
                             <div class="space-bottom-2x"></div>   
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi nostrum aut voluptates veniam. Cum neque quam fuga sapiente quidem eum necessitatibus nulla, cupiditate a, repudiandae iusto in dolor eaque commodi nostrum consequuntur dolores velit eligendi dolorem quae. Distinctio quae, cumque aliquid quos consequuntur perspiciatis voluptates, laboriosam velit qui et aut sint esse nemo voluptatibus, dolore veritatis natus facilis commodi sed. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis tempore, harum consequatur optio laboriosam nihil sint voluptatem ducimus porro quae expedita alias consectetur explicabo cumque maxime facere praesentium! Ad illo quibusdam omnis suscipit qui eos autem est laborum ducimus! Tenetur?     </p>
+                        <p class="text-center">We work closely with our clients to create spaces that will express individuality, offer flexibility and enhance the overall interior design experience. Using holistic
+                            Design principles, we balance form and function to provide tailored design solutions that suit the user’s  needs and provides a place of comfort.
+                            <br>
+                            PRICING
+                            <br>
+                            Hourly rate <br>
+                            $50−$50 depending on the work complexity <br><br>
+                            
+                            Flat free/project free <br>
+                            (estimated number of hours spent on the project)× (hourly rate) +(any extra for difficulty/square footage or any other factor)=Total cost for client
+                            <br><br>
+                            Cost plus <br> <br>
+                            
+                            (Furnishings, minus designer discount)+ (agreed percentage) = Total cost <br>
+                            <br>
+                            Retail <br>
+                            (Retail cost for client) – (designers net total with trade discount) = designer’s fee</p>
                         <div class="space-bottom-2x"></div>   
                     </div>                            
                 </div>                
