Updates the Lorem text

--- a/about.html
+++ b/about.html
@@ -231,7 +231,7 @@
                                 <br>  
                                 Nairobi- 110057           <br>                    
                                 <abbr title="Phone">P:</abbr> (+254) 724978302<br/>
-                                <abbr title="Phone">M:</abbr> 9800000000 <br/>
+                                <!-- <abbr title="Phone">M:</abbr> 9800000000 <br/> -->
                                 alphainteriorskenya@gmail.com<br/>
                                 <!-- abc@interiorweb.com -->
                             </address>
