--- a/index.html
+++ b/index.html
@@ -643,11 +643,11 @@
             <div id="testimonials">
                 <div class="container text-center padding-bottom padding-top-x2">
                     
-                    <div class="general-title">
+                    <!-- <div class="general-title">
                         <h2>From Clients</h2>
                         <div class="space-bottom-2x"></div>   
-                    </div>
-                    <div class="row">
+                    </div> -->
+                    <!-- <div class="row">
                         <div id="owl-testimonials" class="owl-carousel owl-theme">
 
                             <div class="item">
@@ -672,7 +672,7 @@
                             </div>
 
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <!-- End Testimonials -->
